# text_adventure_game_framework

./: pyproject.toml  setup.cfg
docs/xml_examples/: game_objects_and_relations.xml
docs/xml_examples/scenes/: bathroom_beside_shower.xml
docs/xml_examples/transitions/: door_1_from_corridor_to_bathroom1.xml
src/: main.py
src/framework/: core.py  data_types.py  loader.py
